Updates： \n更新了TRPG掷骰模块\n退出时保存当前设置（头像、名字、PL数量） \n更新了自定义数值/笔记栏 \n.st存入Json数据库 \nSC \n技能成长自动判定 \n导出技能st \n优劣势掷骰 Todo: --计算\n对抗骰\n联合骰\n补正骰" --features掷骰栏回车发送\n武器列表\n输出染色HTML(坑)" --bugs\n复杂掷骰算式（多个不同面骰子+常数）优化\n\n"

--- a/name_settings.json
+++ b/name_settings.json
@@ -1,1 +1,1 @@
-{"KP": "\u3010KP\u3011\u4e00\u53ea\u54a9", "DiceBot": "\u5362\u9ab0", "PL 1": "\u6c83\u59c6", "PL 2": "\u53d1\u6492\u7684", "PL 3": "PL 3", "PL 4": "PL 4", "PL 5": "PL 5", "PL 6": "\u7231\u6211\u7684", "PL 7": "PL 7", "PL 8": "PL 8", "PL 9": "PL 9", "PL 10": "PL 10", "PL 11": "PL 11"}
+{"KP": "\u4e00\u53ea\u54a9", "DiceBot": "\u5362\u9ab0", "PL 1": "\u6c83\u59c6", "PL 2": "PL 2", "PL 3": "\u4e00\u53ea\u54a9", "PL 4": "PL 4", "PL 5": "\u4e00\u53ea\u54a9", "PL 6": "\u7231\u6211\u7684", "PL 7": "PL 7", "PL 8": "PL 8", "PL 9": "PL 9", "PL 10": "PL 10", "PL 11": "PL 11"}
