--- a/AppSettings/name_settings.json
+++ b/AppSettings/name_settings.json
@@ -1,1 +1,1 @@
-{"KP": "\u3010KP\u3011\u4e00\u53ea\u54a9", "DiceBot": "\u5362\u9ab0", "PL 1": "\u6c83\u59c6", "PL 2": "\u5362\u745e\u6069", "PL 3": "\u524d\u8f88", "PL 4": "\u56e2\u957f", "PL 5": "PL 5", "PL 6": "\u7231\u6211\u7684", "PL 7": "PL 7", "PL 8": "PL 8", "PL 9": "PL 9", "PL 10": "PL 10", "PL 11": "PL 11"}
+{"KP": "【KP】一只咩", "DiceBot": "卢骰", "PL 1": "沃姆", "PL 2": "卢瑞恩", "PL 3": "前辈", "PL 4": "团长", "PL 5": "PL 5", "PL 6": "爱我的", "PL 7": "PL 7", "PL 8": "PL 8", "PL 9": "PL 9", "PL 10": "PL 10", "PL 11": "PL 11"}
