Updates： 更新了TRPG掷骰模块:联合骰、SC、优劣势、补正骰、对抗骰、武器伤害Built-in 退出时保存当前设置（头像、名字、PL数量） 更新了自定义数值/笔记栏 .st存入Json数据库 技能成长自动判定 导出技能st 骰子性格（结果播报语句。但因为不会出现在log里，所以基本也没啥影响...） #Armor 推理信息库 巴别塔（看控制台）,改了下判定机制 装载NPC模板，该功能能够保留当前栏位的名称并读取某一模板
Todo:
--计算
自动加减基础数值（MP、HP）（不这么做是因为要有理由Focus再UnFocus笔记栏来保存..）
--features
继续优化推理信息库-计算器直接显示在共用库栏位（新建一个Frame，也能避免无法发布到另一个窗口的问题）。此外精简框架，不要占满屏
骰子性格:针对每个技能单独comment(坑)
输出染色HTML(坑)
继续优化简易小地图
实用命令，比如抽人 .who ABCD等 (基本坑，暂时先去用正经骰娘Bot吧)
牌堆(基本坑，暂时先去用正经骰娘Bot吧)
--bugs
复杂掷骰算式（多个不同面骰子+常数）优化
补正骰优化
对抗骰优化
武器伤害Built-in优化
自动加减基础数值（SAN）优化
巴别塔新增角色BUG

Tips:
在角色笔记栏中修改不会影响到角色卡数值，修改HP、MP时均修改的是上限
使用 .st#斗殴@1D3+5 来载入武器伤害公式

--- a/AppSettings/name_settings.json
+++ b/AppSettings/name_settings.json
@@ -1,1 +1,1 @@
-{"KP": "【KP】一只咩", "DiceBot": "卢骰", "PL 1": "沃姆", "PL 2": "卢瑞恩", "PL 3": "前辈", "PL 4": "团长", "PL 5": "PL 5", "PL 6": "爱我的", "PL 7": "PL 7", "PL 8": "PL 8", "PL 9": "PL 9", "PL 10": "PL 10", "PL 11": "PL 11"}
+{"KP": "【KP】一只咩", "DiceBot": "卢骰", "PL 1": "沃姆", "PL 2": "卢瑞恩", "PL 3": "前辈", "PL 4": "团长", "PL 5": "PL 5", "PL 6": "PL 6", "PL 7": "PL 7", "PL 8": "PL 8", "PL 9": "PL 9", "PL 10": "PL 10", "PL 11": "PL 11"}
