--- a/AppSettings/avatar_settings.json
+++ b/AppSettings/avatar_settings.json
@@ -1,1 +1,1 @@
-{"KP": "D:/Cocofolia素材/角色_立绘/KP/人形.PNG", "DiceBot": "D:/Cocofolia素材/角色_立绘/骰娘/卢骰_看着严肃.PNG", "PL 1": "D:/Cocofolia素材/角色_立绘/PL/陛下.PNG", "PL 2": "D:/Cocofolia素材/角色_立绘/PL/Hollow？/IMG_8158.PNG", "PL 3": "", "PL 4": "", "PL 5": ""}
+{"KP": "D:/Cocofolia素材/角色_立绘/KP/人形.PNG", "DiceBot": "D:/Cocofolia素材/角色_立绘/骰娘/卢骰_看着严肃.PNG", "PL 1": "D:/Cocofolia素材/角色_立绘/PL/陛下.PNG", "PL 2": "D:/Cocofolia素材/角色_立绘/PL/Hollow？/IMG_8158.PNG", "PL 3": "", "PL 4": "", "PL 5": "D:/Cocofolia素材/角色_立绘/PL/Hollow？/IMG_8158.PNG"}
